# minigrep

./: Cargo.toml
.github/workflows/: ci.yml  release.yml
src/: config.rs  lib.rs  main.rs
tests/: cli.rs
