[package]
name = "minigrep"
version = "0.1.0"
authors = ["Julien Giovaresco <dev@giovaresco.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "1.0.3"
anyhow = "1.0.40"
clap-verbosity-flag = "0.3.1"
env_logger = "0.8.3"
log = "0.4.14"
predicates="1.0.7"
structopt = "0.3.21"
tempfile="3.2.0"
